# disk-health-mcp

./: .env.example  .gitignore  .qwenignore  AGENTS.md  LICENSE  QUICKSTART.md  README.md  config.example.yaml  pyproject.toml  test_tools.py
docs/: development.md  getting-started.md  security-model.md  tools.md
scripts/: check_md_links.py  generate_smartdb.py
src/disk_health_mcp/: __init__.py  server.py  smart_parser.py  smartdb.py
tests/: conftest.py  test_security.py  test_server.py  test_smart_parser.py
